--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<h2>Hostro Services</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
-		<article>
+		<article class="left-services">
 			<ul>
 				<li>
 					<h3>Retina Ready</h3>
@@ -99,11 +99,11 @@
 			</ul>
 		</article>
 
-		<article>
+		<article class="cellphone">
 			<img src="images/iphone2.png" alt="Celular">
 		</article>
 		
-		<article>
+		<article class="right-services">
 			<ul>
 			<li>
 					<h3>Unlimited Colors</h3>
@@ -121,15 +121,18 @@
 				</li>
 			</ul>
 		</article>
+
+		<div class="cleaner"></div>
 	</section>
 
 	<!-- prices -->
-	<section>
+	<section class="pricing-table">
 		<article class="container">
-			<h2>Pricing Tables</h2>
+			<div class="cleaner"></div>
+			<h3>Pricing Tables</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis non ab deleniti deserunt cum.</p>
 
-			<article>
+			<article class="price-table">
 				<h4>Small Package</h4>
 				<h2><sup>$</sup>15<sup>.9</sup></h2>
 				<p>/month</p>
@@ -154,7 +157,7 @@
 				<a href="#">Select plan</a>
 			</article>
 
-			<article>
+			<article class="price-table">
 				<h4>Normal Package</h4>
 				<h2><sup>$</sup>45<sup>.9</sup></h2>
 				<p>/month</p>
@@ -179,7 +182,7 @@
 				<a href="#">Select plan</a>
 			</article>
 
-			<article>
+			<article class="price-table">
 				<h4>Big Package</h4>
 				<h2><sup>$</sup>95<sup>.9</sup></h2>
 				<p>/month</p>
@@ -204,7 +207,7 @@
 				<a href="#">Select plan</a>
 			</article>
 
-			<article>
+			<article class="price-table">
 				<h4>Best Package</h4>
 				<h2><sup>$</sup>115<sup>.9</sup></h2>
 				<p>/month</p>
@@ -228,22 +231,25 @@
 				</table>
 				<a href="#">Select plan</a>
 			</article>
+
+			<div class="cleaner"></div>
 		</article>
 	</section>
 
 
 	<!-- footer -->
-	<footer>
+	<footer class="main-footer">
 		<h3>Hosting use <span>500,000</span> happy customers. Want to see services?</h3>
-		<article>
+		<article class="bg-dark">
 			<article class="container">
-				<p>© 2015 Coderland. All right reserved.</p>
-				<nav>
+				<p class="copyright">© 2015 Coderland. All right reserved.</p>
+				<nav class="footer-nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="contact.html">Contact</a></li>	
 					</ul>
 				</nav>
+				<div class="cleaner"></div>
 			</article>
 		</article>
 	</footer>
