update final y emprolijamiento de css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<nav class="main-nav">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="contact.html">Contact</a></li>	
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 
@@ -45,7 +45,7 @@
 				<img src="images/wid1.png" alt="speed server">
 			</figure>
 			<h4>speed servers</h4>
-			<p>Lorem <strong>ipsum dolor</strong> sit amet, consectetur adipisicing elit. Voluptatem omnis numquam, ipsa facere doloremque.</p>
+			<p>Lorem adipisicing elit. Voluptatem omnis numquam, ipsa facere doloremque.</p>
 		</article>
 
 		<article class="producto">
@@ -53,7 +53,7 @@
 				<img src="images/wid2.png" alt="descripcion">
 			</figure>
 			<h4>hostro services</h4>
-			<p>Lorem ipsum <em>dolor sit amet, consectetur adipisicing elit</em>. Voluptatem omnis numquam, ipsa facere doloremque.</p>
+			<p>Lorem adipisicing elit. Voluptatem omnis numquam, ipsa facere doloremque.</p>
 		</article>
 
 		<article class="producto">
@@ -61,7 +61,7 @@
 				<img src="images/wid3.png" alt="descripcion">
 			</figure>
 			<h4>live support</h4>
-			<p>Lorem ipsum <b>dolor sit amet, consectetur adipisicing elit</b>. Voluptatem omnis numquam, ipsa facere doloremque.</p>
+			<p>Lorem adipisicing elit. Voluptatem omnis numquam, ipsa facere doloremque.</p>
 		</article>
 
 		<article class="producto">
@@ -69,7 +69,7 @@
 				<img src="images/wid4.png" alt="descripcion">
 			</figure>
 			<h4>get domain name</h4>
-			<p>Lorem ipsum <i>dolor sit amet</i>, consectetur adipisicing elit. Voluptatem omnis numquam, ipsa facere doloremque.</p>
+			<p>Lorem adipisicing elit. Voluptatem omnis numquam, ipsa facere doloremque.</p>
 		</article>
 
 		<div class="cleaner"></div>
@@ -77,7 +77,7 @@
 
 	<!-- services -->
 	<section class="container">
-		<h2>Hostro Services</h2>
+		<h2 class="title-services">Hostro Services</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
 		<article class="left-services">
@@ -102,7 +102,7 @@
 		<article class="cellphone">
 			<img src="images/iphone2.png" alt="Celular">
 		</article>
-		
+
 		<article class="right-services">
 			<ul>
 			<li>
@@ -163,8 +163,8 @@
 				<p>/month</p>
 				<table>
 					<tr>
-						<td>Hard Drive, GB</td>
-						<td>5</td>
+						<td width="70%">Hard Drive, GB</td>
+						<td width="30%">5</td>
 					</tr>
 					<tr>
 						<td>Transfer, GB</td>
@@ -246,7 +246,7 @@
 				<nav class="footer-nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="contact.html">Contact</a></li>	
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
 				<div class="cleaner"></div>
