form contacto pte responsive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<figure class="logo">
 			<img src="images/header-logo.png" alt="logo Hostro">
-			<figcaption>Logo Hostro Hosting Services</figcaption>
+			<figcaption>Logo Hostro</figcaption>
 		</figure>
 
 		<nav class="main-nav">
@@ -29,7 +29,7 @@
 	<div id="banner">
 		<div class="container">
 			<h2 class="banner-title">Regular Updates</h2>
-			<p class="banner-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Temporibus dolores officiis.</p>
+			<p class="banner-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
 			<form action="" class="register">
 				<input type="email" placeholder="Enter your domain name and hit enter">
@@ -54,7 +54,7 @@
 				<img src="images/wid2.png" alt="descripcion">
 			</figure>
 			<h4>hostro services</h4>
-			<p>Lorem adipisicing elit. Voluptatem omnis numquam, ipsa facere doloremque.</p>
+			<p>Lorem adipisicing elit. Voluptatem omnis numquam, ipsa facere doloremque. Ipsa facere doloremque.</p>
 		</article>
 
 		<article class="producto">
