contact pte responsive y tablas.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Home</title>
+	<title>Home Hostro</title>
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -253,7 +253,6 @@
 				<div class="cleaner"></div>
 			</article>
 		</article>
-	</footer>
-
+	</footer>	
 </body>
 </html>
