formulario de contacto pte responsive

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Home Hostro</title>
@@ -140,19 +140,19 @@
 				<table>
 					<tr>
 						<td>Hard Drive, GB</td>
-						<td>2</td>
+						<td class="small-package">2</td>
 					</tr>
 					<tr>
 						<td>Transfer, GB</td>
-						<td>1</td>
+						<td class="small-package">1</td>
 					</tr>
 					<tr>
 						<td>Data bases</td>
-						<td>1</td>
+						<td class="small-package">1</td>
 					</tr>
 					<tr>
 						<td>Dashboards</td>
-						<td>1</td>
+						<td class="small-package">1</td>
 					</tr>
 				</table>
 				<a href="#">Select plan</a>
@@ -169,15 +169,15 @@
 					</tr>
 					<tr>
 						<td>Transfer, GB</td>
-						<td>2</td>
+						<td class="normal-package">2</td>
 					</tr>
 					<tr>
 						<td>Data bases</td>
-						<td>2</td>
+						<td class="normal-package">2</td>
 					</tr>
 					<tr>
 						<td>Dashboards</td>
-						<td>2</td>
+						<td class="normal-package">2</td>
 					</tr>
 				</table>
 				<a href="#">Select plan</a>
@@ -190,19 +190,19 @@
 				<table>
 					<tr>
 						<td>Hard Drive, GB</td>
-						<td>12</td>
+						<td class="big-package">12</td>
 					</tr>
 					<tr>
 						<td>Transfer, GB</td>
-						<td>5</td>
+						<td class="big-package">5</td>
 					</tr>
 					<tr>
 						<td>Data bases</td>
-						<td>5</td>
+						<td class="big-package">5</td>
 					</tr>
 					<tr>
 						<td>Dashboards</td>
-						<td>5</td>
+						<td class="big-package">5</td>
 					</tr>
 				</table>
 				<a href="#">Select plan</a>
@@ -215,19 +215,19 @@
 				<table>
 					<tr>
 						<td>Hard Drive, GB</td>
-						<td>20</td>
+						<td class="best-package">20</td>
 					</tr>
 					<tr>
 						<td>Transfer, GB</td>
-						<td>10</td>
+						<td class="best-package">10</td>
 					</tr>
 					<tr>
 						<td>Data bases</td>
-						<td>10</td>
+						<td class="best-package">10</td>
 					</tr>
 					<tr>
 						<td>Dashboards</td>
-						<td>10</td>
+						<td class="best-package">10</td>
 					</tr>
 				</table>
 				<a href="#">Select plan</a>
