Form contacto y media queries

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 				<input type="text" placeholder="Subject">
 			</article>
 			<article class="contact-form-right">
-				<input type="textarea" placeholder="Message">
+				<textarea placeholder="Message"></textarea>
 			</article>
 			<div class="cleaner"></div>
 			<article class="button-form">
