--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 				<p>/month</p>
 				<table>
 					<tr>
-						<td>Hard Drive, GB</td>
-						<td class="small-package">2</td>
+						<td width="70%">Hard Drive, GB</td>
+						<td width="30%" class="small-package">2</td>
 					</tr>
 					<tr>
 						<td>Transfer, GB</td>
@@ -165,7 +165,7 @@
 				<table>
 					<tr>
 						<td width="70%">Hard Drive, GB</td>
-						<td width="30%">5</td>
+						<td width="30%" class="normal-package">5</td>
 					</tr>
 					<tr>
 						<td>Transfer, GB</td>
